--- a/PPIU_Uni_WebDesign/index.html
+++ b/PPIU_Uni_WebDesign/index.html
@@ -55,7 +55,7 @@
         >
           <div class="offcanvas-header">
             <h5
-              class="offcanvas-title"
+              class="offcanvas-title menu-nav"
               id="offcanvasNavbarLabel"
               data-lang="menu"
             >
@@ -63,7 +63,7 @@
             </h5>
             <button
               type="button"
-              class="btn-close"
+              class="btn-close btn-nav"
               data-bs-dismiss="offcanvas"
               aria-label="Close"
             ></button>
@@ -72,7 +72,7 @@
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
                 <a
-                  class="nav-link active"
+                  class="nav-link active home-nav"
                   aria-current="page"
                   href="#homePage"
                   data-lang="home"
