--- a/pages/Academic/academic.html
+++ b/pages/Academic/academic.html
@@ -327,189 +327,27 @@
       </div>
   </nav>
   
-  <div class="max-w-6xl mx-auto px-4 py-12">
-    <h2 class="text-3xl font-bold text-center text-gray-800 mb-10">Study Tour in the Country</h2>
+
   
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-      
-      <!-- Card 1 -->
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden" data-tour>
-        <img src="https://source.unsplash.com/featured/?university,temple" alt="Local Tour 1" class="w-full h-48 object-cover">
-        <div class="p-5">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">Historical Sites Tour</h3>
-          <p class="text-gray-600 text-sm mb-3 line-clamp-3">
-            Discover Cambodia’s rich cultural heritage through guided visits to temples and museums.
-          </p>
-          <button class="text-sm text-blue-600 font-medium hover:underline" onclick="toggleDetail(this)">Read More</button>
-          <div class="mt-4 hidden">
-            <p class="text-sm text-gray-600">
-              This tour includes educational trips to Angkor Wat, National Museum, and local cultural workshops. Learn about ancient civilizations and architecture.
+  
+    <!-- Academic -->
+    <div id="Academic" class="container mx-auto p-6 max-w-6xl dark:text-white">
+        <header class="mb-12">
+          <h1 class="text-4xl font-bold text-center mb-8 text-blue-800">Academic Faculties</h1>
+          <div class="max-w-3xl mx-auto space-y-4">
+            <p class="text-base text-center">
+              Phnom Penh International University (PPIU) has its own important missions in the development of human resources with a real atmosphere of Quality, Excellence, and Innovation in order to prepare students to become professionals and also to be part of national, regional, and global developments. To achieve these missions, PPIU has carefully selected core programs with highly experienced and qualified lecturers to teach students more than just their discipline, dignity, and ethics.
+            </p>
+            <p class="text-base text-center">
+              Phnom Penh International University offers foreign language training and professional education at associate, bachelor, master, and doctoral levels. Foreign language training is available at the International Language Center (ILC), which is located within the university.
             </p>
           </div>
+        </header>
+        <div id="faculty-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+          <!-- Faculty cards will be dynamically inserted here -->
         </div>
       </div>
-  
-      <!-- Card 2 -->
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden" data-tour>
-        <img src="https://source.unsplash.com/featured/?farm,students" alt="Local Tour 2" class="w-full h-48 object-cover">
-        <div class="p-5">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">Agriculture Field Trip</h3>
-          <p class="text-gray-600 text-sm mb-3 line-clamp-3">
-            Learn about local farming techniques, sustainability, and agro-business through real field experience.
-          </p>
-          <button class="text-sm text-blue-600 font-medium hover:underline" onclick="toggleDetail(this)">Read More</button>
-          <div class="mt-4 hidden">
-            <p class="text-sm text-gray-600">
-              Visit rice fields, meet local farmers, and understand agricultural innovation in Cambodia. Ideal for environmental science and economics students.
-            </p>
-          </div>
-        </div>
-      </div>
-  
-      <!-- Card 3 -->
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden" data-tour>
-        <img src="https://source.unsplash.com/featured/?school,students" alt="Local Tour 3" class="w-full h-48 object-cover">
-        <div class="p-5">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">University Campus Tour</h3>
-          <p class="text-gray-600 text-sm mb-3 line-clamp-3">
-            Explore top universities in Phnom Penh to learn about academic life, programs, and future careers.
-          </p>
-          <button class="text-sm text-blue-600 font-medium hover:underline" onclick="toggleDetail(this)">Read More</button>
-          <div class="mt-4 hidden">
-            <p class="text-sm text-gray-600">
-              Includes guided campus tours, mock lectures, career talks, and student networking sessions with local undergraduates.
-            </p>
-          </div>
-        </div>
-      </div>
-            <!-- Card 3 -->
-            <div class="bg-white rounded-xl shadow-lg overflow-hidden" data-tour>
-                <img src="https://source.unsplash.com/featured/?school,students" alt="Local Tour 3" class="w-full h-48 object-cover">
-                <div class="p-5">
-                  <h3 class="text-xl font-semibold text-gray-800 mb-2">University Campus Tour</h3>
-                  <p class="text-gray-600 text-sm mb-3 line-clamp-3">
-                    Explore top universities in Phnom Penh to learn about academic life, programs, and future careers.
-                  </p>
-                  <button class="text-sm text-blue-600 font-medium hover:underline" onclick="toggleDetail(this)">Read More</button>
-                  <div class="mt-4 hidden">
-                    <p class="text-sm text-gray-600">
-                      Includes guided campus tours, mock lectures, career talks, and student networking sessions with local undergraduates.
-                    </p>
-                  </div>
-                </div>
-              </div>
-                    <!-- Card 3 -->
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden" data-tour>
-        <img src="https://source.unsplash.com/featured/?school,students" alt="Local Tour 3" class="w-full h-48 object-cover">
-        <div class="p-5">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">University Campus Tour</h3>
-          <p class="text-gray-600 text-sm mb-3 line-clamp-3">
-            Explore top universities in Phnom Penh to learn about academic life, programs, and future careers.
-          </p>
-          <button class="text-sm text-blue-600 font-medium hover:underline" onclick="toggleDetail(this)">Read More</button>
-          <div class="mt-4 hidden">
-            <p class="text-sm text-gray-600">
-              Includes guided campus tours, mock lectures, career talks, and student networking sessions with local undergraduates.
-            </p>
-          </div>
-        </div>
-      </div>
-            <!-- Card 3 -->
-            <div class="bg-white rounded-xl shadow-lg overflow-hidden" data-tour>
-                <img src="https://source.unsplash.com/featured/?school,students" alt="Local Tour 3" class="w-full h-48 object-cover">
-                <div class="p-5">
-                  <h3 class="text-xl font-semibold text-gray-800 mb-2">University Campus Tour</h3>
-                  <p class="text-gray-600 text-sm mb-3 line-clamp-3">
-                    Explore top universities in Phnom Penh to learn about academic life, programs, and future careers.
-                  </p>
-                  <button class="text-sm text-blue-600 font-medium hover:underline" onclick="toggleDetail(this)">Read More</button>
-                  <div class="mt-4 hidden">
-                    <p class="text-sm text-gray-600">
-                      Includes guided campus tours, mock lectures, career talks, and student networking sessions with local undergraduates.
-                    </p>
-                  </div>
-                </div>
-              </div>
-                    <!-- Card 3 -->
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden" data-tour>
-        <img src="https://source.unsplash.com/featured/?school,students" alt="Local Tour 3" class="w-full h-48 object-cover">
-        <div class="p-5">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">University Campus Tour</h3>
-          <p class="text-gray-600 text-sm mb-3 line-clamp-3">
-            Explore top universities in Phnom Penh to learn about academic life, programs, and future careers.
-          </p>
-          <button class="text-sm text-blue-600 font-medium hover:underline" onclick="toggleDetail(this)">Read More</button>
-          <div class="mt-4 hidden">
-            <p class="text-sm text-gray-600">
-              Includes guided campus tours, mock lectures, career talks, and student networking sessions with local undergraduates.
-            </p>
-          </div>
-        </div>
-      </div>
-            <!-- Card 3 -->
-            <div class="bg-white rounded-xl shadow-lg overflow-hidden" data-tour>
-                <img src="https://source.unsplash.com/featured/?school,students" alt="Local Tour 3" class="w-full h-48 object-cover">
-                <div class="p-5">
-                  <h3 class="text-xl font-semibold text-gray-800 mb-2">University Campus Tour</h3>
-                  <p class="text-gray-600 text-sm mb-3 line-clamp-3">
-                    Explore top universities in Phnom Penh to learn about academic life, programs, and future careers.
-                  </p>
-                  <button class="text-sm text-blue-600 font-medium hover:underline" onclick="toggleDetail(this)">Read More</button>
-                  <div class="mt-4 hidden">
-                    <p class="text-sm text-gray-600">
-                      Includes guided campus tours, mock lectures, career talks, and student networking sessions with local undergraduates.
-                    </p>
-                  </div>
-                </div>
-              </div>
-                    <!-- Card 3 -->
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden" data-tour>
-        <img src="https://source.unsplash.com/featured/?school,students" alt="Local Tour 3" class="w-full h-48 object-cover">
-        <div class="p-5">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">University Campus Tour</h3>
-          <p class="text-gray-600 text-sm mb-3 line-clamp-3">
-            Explore top universities in Phnom Penh to learn about academic life, programs, and future careers.
-          </p>
-          <button class="text-sm text-blue-600 font-medium hover:underline" onclick="toggleDetail(this)">Read More</button>
-          <div class="mt-4 hidden">
-            <p class="text-sm text-gray-600">
-              Includes guided campus tours, mock lectures, career talks, and student networking sessions with local undergraduates.
-            </p>
-          </div>
-        </div>
-      </div>
-            <!-- Card 3 -->
-            <div class="bg-white rounded-xl shadow-lg overflow-hidden" data-tour>
-                <img src="https://source.unsplash.com/featured/?school,students" alt="Local Tour 3" class="w-full h-48 object-cover">
-                <div class="p-5">
-                  <h3 class="text-xl font-semibold text-gray-800 mb-2">University Campus Tour</h3>
-                  <p class="text-gray-600 text-sm mb-3 line-clamp-3">
-                    Explore top universities in Phnom Penh to learn about academic life, programs, and future careers.
-                  </p>
-                  <button class="text-sm text-blue-600 font-medium hover:underline" onclick="toggleDetail(this)">Read More</button>
-                  <div class="mt-4 hidden">
-                    <p class="text-sm text-gray-600">
-                      Includes guided campus tours, mock lectures, career talks, and student networking sessions with local undergraduates.
-                    </p>
-                  </div>
-                </div>
-              </div>
-  
-    </div>
-  </div>
-  
-  <!-- JavaScript to toggle detail section -->
-  <script>
-    function toggleDetail(button) {
-      const detailBox = button.nextElementSibling;
-      const isHidden = detailBox.classList.contains('hidden');
-      detailBox.classList.toggle('hidden');
-      button.textContent = isHidden ? 'Show Less' : 'Read More';
-    }
-  </script>
-  
-  
-  
+      <script src="/js/academic.js"></script>
   
   
   
