--- a/pages/Alumni/alumni.html
+++ b/pages/Alumni/alumni.html
@@ -52,7 +52,7 @@
         
             <!-- Faculty Dropdown -->
             <div class="relative group">
-              <a href="#Academic" class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400" onclick="goToPage(event, '/pages/.html')">
+              <a href="#Academic" class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400" onclick="goToPage(event, '/pages/Academic/academic.html')">
                 ACADEMIC
               </a>
               <div class="absolute hidden group-hover:block bg-white dark:bg-gray-700 shadow-lg rounded-md mt-2 w-60 z-50">
@@ -103,12 +103,12 @@
             <a href="#" class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400" onclick="goToPage(event, '/pages/about_ppiu.html')">About</a>
             <!-- Alumni Dropdown -->
             <div class="relative group">
-              <a href="#Study_materials" class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400">
+              <a href="#" class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400" onclick="goToPage(event, '/pages/study_material/study_material.html')">
                 Study materials
               </a>
               <div class="absolute hidden group-hover:block bg-white dark:bg-gray-700 shadow-lg rounded-md mt-2 w-60 z-50">
                 <div class="py-2">
-                  <a href="#" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-600" onclick="goToPage(event, '/pages/study_material/library.html')">
+                  <a href="#" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-600" onclick="goToPage(event, '/pages/study_material/Library.html')">
                     Library
                   </a>
                   <a href="#" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-600" onclick="goToPage(event, '/pages/study_material/meeting_room.html')">
@@ -148,7 +148,7 @@
               </div>
             </div>
           </div>
-            <a href="#Contact" class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400">Contact</a>
+            <a href="#Contact" class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400" onclick="goToPage(event, '/pages/contact.html')">Contact</a>
           </div>
         </div>
         
@@ -210,10 +210,10 @@
       <div class="px-2 pt-2 pb-3 space-y-1 mt-10 bg-white dark:bg-gray-800">
         <!-- Admission Dropdown -->
         <div class="relative group">
-          <a href="#" class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400">
+          <a href="#" class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400" onclick="goToPage(event, '/pages/Admission/admission.html')">
             ADMISSION
           </a>
-          <div class="absolute hidden group-hover:block bg-white dark:bg-gray-700 shadow-lg rounded-md mt-2 w-60 z-50">
+          <div class="absolute hidden group-hover:block bg-white dark:bg-gray-700 shadow-lg rounded-md mt-2 w-60 z-50" onclick="goToPage(event, '/pages/Admission/associate.html')">
             <div class="py-2">
               <a href="#" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-600">
                 ASSOCIATE
