--- a/pages/Alumni/study_tour_abroad.html
+++ b/pages/Alumni/study_tour_abroad.html
@@ -352,7 +352,7 @@
   
       <!-- Repeat Card as needed -->
       <div class="bg-white rounded-xl shadow-lg overflow-hidden" data-tour>
-        <img src="/images/luffy.jpg" alt="Study Tour" class="w-full h-48 object-cover">
+        <img src="/images/banner_4.JPG" alt="Study Tour" class="w-full h-48 object-cover">
         <div class="p-5">
           <h3 class="text-xl font-semibold text-gray-800 mb-2">Europe Academic Trip</h3>
           <p class="text-gray-600 text-sm mb-3 line-clamp-3">
@@ -387,7 +387,7 @@
   
       <!-- Repeat Card as needed -->
       <div class="bg-white rounded-xl shadow-lg overflow-hidden" data-tour>
-        <img src="/images/luffy.jpg" alt="Study Tour" class="w-full h-48 object-cover">
+        <img src="/images/banner_4.JPG" alt="Study Tour" class="w-full h-48 object-cover">
         <div class="p-5">
           <h3 class="text-xl font-semibold text-gray-800 mb-2">Europe Academic Trip</h3>
           <p class="text-gray-600 text-sm mb-3 line-clamp-3">
@@ -422,7 +422,7 @@
   
       <!-- Repeat Card as needed -->
       <div class="bg-white rounded-xl shadow-lg overflow-hidden" data-tour>
-        <img src="/images/luffy.jpg" alt="Study Tour" class="w-full h-48 object-cover">
+        <img src="/images/banner_4.JPG" alt="Study Tour" class="w-full h-48 object-cover">
         <div class="p-5">
           <h3 class="text-xl font-semibold text-gray-800 mb-2">Europe Academic Trip</h3>
           <p class="text-gray-600 text-sm mb-3 line-clamp-3">
@@ -457,7 +457,7 @@
   
       <!-- Repeat Card as needed -->
       <div class="bg-white rounded-xl shadow-lg overflow-hidden" data-tour>
-        <img src="/images/luffy.jpg" alt="Study Tour" class="w-full h-48 object-cover">
+        <img src="/images/banner_4.JPG" alt="Study Tour" class="w-full h-48 object-cover">
         <div class="p-5">
           <h3 class="text-xl font-semibold text-gray-800 mb-2">Europe Academic Trip</h3>
           <p class="text-gray-600 text-sm mb-3 line-clamp-3">
@@ -492,7 +492,7 @@
   
       <!-- Repeat Card as needed -->
       <div class="bg-white rounded-xl shadow-lg overflow-hidden" data-tour>
-        <img src="/images/luffy.jpg" alt="Study Tour" class="w-full h-48 object-cover">
+        <img src="/images/banner_4.JPG" alt="Study Tour" class="w-full h-48 object-cover">
         <div class="p-5">
           <h3 class="text-xl font-semibold text-gray-800 mb-2">Europe Academic Trip</h3>
           <p class="text-gray-600 text-sm mb-3 line-clamp-3">
